docs/.vuepress/styles/index.scss
// place your custom styles here
:root {
    --pwa-popup-text-color: #2C3E50;
    --pwa-popup-bg-color: #ffffff;
    --pwa-popup-border-color: rgba(0,0,0,0.15);
    --pwa-popup-shadow: 0 4px 16px var(--pwa-popup-border-color);
    
    --pwa-popup-btn-text-color: white;
    --pwa-popup-btn-bg-color: #1e69ff;
    --pwa-popup-btn-hover-bg-color: #0759ff;
    }
    
    body {
        overflow-x: hidden !important;
        font-family: "Inter" !important;
    }
    .site-name {
        display: none;
    }
    div[class*=language-] > button.copy-code-button:not(.pure) {
        background: #8687fb !important;
    }
    
    .theme-container {
        position: relative;
        min-height: calc(100vh - 152px);
        padding-bottom: 152px;
        background: #F7F9FC;
    }

    [data-theme="dark"] .theme-container {
        background: #262B33;
    }
    
    [data-theme="dark"] img[src*="/full_logo_zksync-white.svg"] {
        content: url("/full_logo_zksync-white.svg");
    }

    [data-theme="light"] img[src*="/full_logo_zksync-black.svg"] {
        content: url("/full_logo_zksync-black.svg");
    }

    .footer-wrapper {
        position: absolute;
        bottom: 0;
        left: 0;
        right: 0;
    }
    
    .copy-icon {
        background: #1e69ff !important;
    }
    
    .copyright {
        display: none;
    }
    
    p{
        hyphens: none !important;
        text-align: inherit !important;
    }
    
    [data-theme="dark"] #toc .toc-link {
        color: #FFFFFFCC !important;
    }
    
    #toc .toc-link {
        color: #2C3E50 !important;
    }

    .sidebar {
        box-shadow: 0 0 0 0;
    }

    [data-theme="light"] .sidebar {
        background: #E8ECF2;
        border-right: 1px solid #DADDE5;
    }

    [data-theme="dark"] .sidebar {
        border-right: 1px solid #3D424D;
        background: #262B33;

        a {
            color: rgba(133, 140, 153, 1);
        }
        .sidebar-links {
            span.title {
                color: white;
            }
        }
        .sidebar-link {
            &.active {
                color: white;
                background: linear-gradient(90deg, rgba(23, 85, 244, 0), rgba(23, 85, 244, .5));
            }
        }
    }

    .sidebar-links {
        span.title {
            font-size: 1rem !important;
            font-weight: 700 !important;
        }

        .sidebar-link {
            font-size: 1rem !important;

            &.active {
                border-right: 2px solid #1755f4;
                background: linear-gradient(90deg, rgba(23, 85, 244, 0), rgba(23, 85, 244, .3));
                border-left: none;
                color:inherit
            }
        }
    }
    * {
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
    }
    
    
    .newsletter-input {
        display: inline-block;
        width: 18rem;
        font-size: 1rem;
        color: #8c8dfc;
        background-color: #fff;
        padding: 0.5rem 1rem;
        margin: 0.1rem;
        border-radius: 4px;
        transition: background-color .1s ease;
        box-sizing: border-box;
        border: 1px solid #ddd;
    }
    
    .newsletter-button {
        display: inline-block;
        width: 10rem;
        font-size: 1rem;
        color: #8c8dfc;
        background-color: #fff;
        padding: 0.5rem 1.5rem;
        margin: 0.2rem;
        border-radius: 4px;
        transition: background-color .1s ease;
        box-sizing: border-box;
        border: 1px solid #ccc;
        cursor: pointer;
    }
    
    input[type="submit" i] {
        appearance: auto;
        user-select: none;
        white-space: pre;
        align-items: flex-start;
        text-align: center;
    }
    
    .landing .hero-img {
        max-width: 70%;
        width: 400px;
        margin: 10px auto;
    
        img {
            width: 100%;
            margin-bottom: 20px;
        }
    }
    
    #toc {
        padding: 0 9rem !important;
    }
    
    @media screen and (max-width: 1600px) {
        #toc {
            padding: 0 4rem !important;
        }
    }
    
    span.title {
        font-size: 14px !important;
    }
    
    hr{
        display: none !important;
    }
    
    tbody td a {
        white-space: nowrap;
    }
    
    a.title {
        font-weight: 700 !important;
    }
    
    .logo {
        height: 1.5rem !important;
        padding: 0.70rem 0 !important;
    }
    
    .external-link-icon {
        padding-left: 4px;
    }
    
    /* Mobile */
    @media screen and (max-width: 419px) {
        div[class*=language-] > button.copy-code-button:not(.pure) {
            border-radius: 15px !important;
            margin: 30px 0 -0.9rem 0 !important;
        }
        .copy-icon {
            margin: 0 0 30px -0.1rem !important;
        }
    }
    p.description {
        font-size: 16px !important;
    }
    
    h1#main-title {
        font-size: 30px !important;
    }
    
    .home.project .features {
    
        border-top: none !important;
    }
    
    //Homepage Redesign
    $light-selector: 'html[data-theme="light"]';
    $dark-selector: 'html[data-theme="dark"]';
    
    $light-text: #fff;
    $dark-text: #2c3e50;
    $dark-background-color: #1d2536;
    $background-color: #fff;
    $border-color: #e5e7eb;
    
    [data-theme="dark"] a.title {
        color: $light-text !important;
    }
    
    [data-theme="light"] a.title {
        color: $dark-text !important;
    }
    
    [data-theme="light"] img[src*="/zksync_logo.svg"] {
        content: url("/zksync_logo_black.svg");
    }
    
    [data-theme="dark"] img[src*="/zksync_logo_black.svg"] {
        content: url("/zksync_logo.svg");
    }

    [data-theme="light"] img[src*="/images/x_logo.svg"] {
        content: url("/images/x_logo_black.svg");
    }
    
    [data-theme="dark"] img[src*="/images/x_logo_black.svg"] {
        content: url("/images/x_logo.svg");
    }
/* ... */

